--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -328,7 +328,7 @@ Definition des class de style Silverpeas
 	color: #666666
 }
 
-.txtpetitblanc {
+.txtPetitBlanc, .txtpetitblanc {
 	font-size: 11px;
 	font-weight: bold;
 	color: #FFFFFF
@@ -544,12 +544,32 @@ Definition des class de style Silverpeas
 	white-space: nowrap;
 }
 
+#outilsAdmin {
+	position: absolute;
+	left: 200px;
+	height: 15px;
+	width: 100%;
+	top: 6px;
+	color: #999999;
+	background-color:#FFF;
+	border:1px solid #333;
+	width:auto;
+	padding: 2px 15px 7px
+}
+
+#outilsAdmin a {
+	color: #999999;
+}
+
 .ongletAdminOff {
-	background-color: #8494B2
+	background-color: #333
 }
 
 .ongletAdminOn {
 	background-color: #CCCCCC
+}
+.ongletAdminOn span.textePetitBold, .ongletAdminOff span.txtPetitBlanc {
+	font-size:12px;
 }
 
 .intfdcolor1 {
@@ -712,7 +732,7 @@ Style Utilise par le ViewGenerator
 }
 
 .componentNav {
-	font-size: 11px
+	font-size: 12px
 }
 
 .domainName {
