Using version for a better display nam in the IDEs

--- a/src/site/xdoc/installation.xml.vm
+++ b/src/site/xdoc/installation.xml.vm
@@ -33,8 +33,7 @@
   </head>
   <body>
     <section name="Pre-requisite">
-      <p>Silverpeas V5 has been tested and can be automatically deployed on a pre-configured version of JBoss 4.0.3. <b>Since Silverpeas 5.7 
-you have to use JBoss 6.x</b>. Silverpeas V5 has also been successfully deployed and run on other Application Servers (such as Websphere, Weblogic, ect.).
+      <p>Silverpeas V5 has been tested and can be automatically deployed on JBoss 6.x. Silverpeas V5 has also been successfully deployed and run on other Application Servers (such as Websphere, Weblogic, ect.).
 Please find a list of the tools you will need to install Silverpeas below.<br/>
       </p>
       <subsection name="Java 6">
@@ -113,18 +112,18 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
     <section name="Installation">
       <p>You will get better performance with GNU/Linux systems.</p>
       <subsection name="Installing JBoss">
-        <p>Since version 5.6, Silverpeas runs by default with JBoss AS 6.0 (<b>JBoss 4 will no longer be supported from the version 5.7</b>).<br/>
+        <p>Since version 5.6, Silverpeas runs by default with JBoss AS 6.0.<br/>
         Please download it from:</p>
         <ul>
           <li><a href="http://download.jboss.org/jbossas/6.1/jboss-as-distribution-6.1.0.Final.zip"><img src="images/windows_logo_24X24.png"/><img src="images/linux_logo_24X24.png"/>here for both Windows and GNU/Linux</a></li>
-        </ul> 
-        <p><b>For older versions</b>, we provide a pre-packaged and pre-configured version of JBoss 4.0.3.<br/>
-        Please download it from :</p>
-        <ul>
-          <li><a href="http://repository.silverpeas.org/files/jboss403.zip"><img src="images/windows_logo_24X24.png"/> here for Windows</a></li>
-          <li><a href="http://repository.silverpeas.org/files/jboss403.tar.gz"><img src="images/linux_logo_24X24.png"/> here for GNU/Linux</a>.</li>
-        </ul>
+        </ul>        
         <p>You have to set-up the environment variable <b>JBOSS_HOME</b> for the directory in which you have extracted the JBoss archive.</p>
+        <p>Please note that the <b>administration console</b> and the <b>JMX console</b> are activated per default on JBoss 6.x, if you plan to use this server in production, don't forget to <a href="http://docs.jboss.org/jbosssecurity/docs/6.0/security_guide/html_single/index.html#chap-Consoles_and_Invokers" >secure them</a> or to remove them, following files:</p>
+        <ul>
+          <li><i>$JBOSS_HOME/server/default/deploy/admin-console-activator-jboss-beans.xml</i></li>
+          <li><i>$JBOSS_HOME/server/default/deploy/jmx-console-activator-jboss-beans.xml</i></li>
+        </ul>
+        <p>the Jboss community provides also a groovy script to secure your Jboss 6.x instance : follow the instructions from <a href="http://community.jboss.org/wiki/SimpleWayToLockUpYourJBossASInstance">this page</a>.</p>
       </subsection>
       <subsection name="Preparing Silverpeas">
         <p>We currently provide a packaged and pre-configured version that will build Silverpeas and its database. Please download </p>
@@ -133,13 +132,6 @@ Please find a list of the tools you will need to install Silverpeas below.<br/>
           <ul>
           <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}-jboss6.zip"><img src="images/windows_logo_24X24.png"/> the last stable version for Windows</a></li>
           <li><a href="http://repository.silverpeas.org/files/silverpeas-${installer_stable_version}-jboss6.tar.gz"><img src="images/linux_logo_24X24.png"/> the last stable version  for GNU/Linux</a></li>
-        </ul>
-</fieldset>
-<fieldset>
-        <legend>Stable release for JBoss 4.0.3. This is deprecated</legend>
-          <ul>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-5.6.2-jboss4.zip"><img src="images/windows_logo_24X24.png"/> the last stable version for Windows</a></li>
-          <li><a href="http://repository.silverpeas.org/files/silverpeas-5.6.2-jboss4.tar.gz"><img src="images/linux_logo_24X24.png"/> the last stable version  for GNU/Linux</a></li>
         </ul>
 </fieldset>
 <fieldset>
