Adding a gallery of screenshots

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -201,8 +201,7 @@ ul.menu li {
 	}
 
 div#banner {
-   /* background: url("../images/bg_header.jpg") no-repeat scroll left top #FFFFFF;*/
-   background: url("../images/bgheaderchristmas.jpg") no-repeat scroll left top #FFFFFF;
+   background: url("../images/bgheaderwinter.jpg") no-repeat scroll left top #FFFFFF;
 }
 
 a.externalLink {
