--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -4270,9 +4270,9 @@ html:not([lang*=""]) .add_position:hover {
 
 
 
-/********************************/
+/*******************************/
 /** BackEnd Applications List **/
-/******************************/
+/*******************************/
 
 ul.applicationsTypeList *{
 	padding:0;
@@ -4455,4 +4455,28 @@ li.application  .applicationName {
 .type_05 a  span{background:transparent url(../icons/component/groupe_Type_workflow.png) 18px 3px no-repeat;}
 .type_06 a  span {background:transparent url(../icons/component/groupe_Type_connecteur.png) 18px 3px no-repeat;}
 
+/*************************************/
+/** BackEnd Applications List - End */
+/***********************************/
 
+.admin.stats.volume #chart {
+	float: left;
+	width: 75%;
+}
+
+.admin.stats.volume #total {
+	float: left;
+	font-size: 16px;
+	font-weight: bold;
+	display: table;
+	height: 350px;
+}
+
+.admin.stats.volume #total>span {
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.admin.stats.volume #total .number {
+	color: #F1790F;
+}
