--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -25,7 +25,7 @@
 /*************************************
 Redefinition des style de balises HTML
 *************************************/
-BODY {
+body {
 	scrollbar-face-color: #FFFFFF;
 	scrollbar-shadow-color: #FFFFFF;
 	scrollbar-highlight-color: #FFFFFF;
@@ -38,19 +38,19 @@ BODY {
 	margin: 0px;
 }
 
-TD,div {
+td,div {
 	font-family: "Verdana", "Arial", sans-serif;
 	font-size: 10px
 }
 
-A {
+a {
 	font-family: "Verdana", "Arial", sans-serif;
 	font-size: 10px;
 	text-decoration: none;
 	color: #000000
 }
 
-A:hover {
+a:hover {
 	color: #666699;
 }
 
@@ -60,6 +60,11 @@ input {
 	font-size: 10px;
 	color: #000000;
 	border: 1px solid #999999;
+}
+
+input[type=radio],
+input[type=checkbox]{
+	border:0px;
 }
 
 .invisible {
@@ -89,15 +94,15 @@ Label,legend {
 	font-weight: bold
 }
 
-TABLE.frame {
+table.frame {
 	background-color: #CCCCCC
 }
 
-TR.frame {
+tr.frame {
 	background-color: #CCCCCC
 }
 
-TD.frame {
+td.frame {
 	background-color: #CCCCCC;
 	color: #FFFFFF;
 	text-align: left;
@@ -105,15 +110,15 @@ TD.frame {
 	font-weight: bold
 }
 
-TABLE.title {
+table.title {
 	background-color: #CCCCCC
 }
 
-TR.title {
+tr.title {
 	background-color: #CCCCCC
 }
 
-TD.title {
+td.title {
 	background-color: #CCCCCC;
 	font-style: normal;
 	font-size: 11pt;
@@ -121,19 +126,28 @@ TD.title {
 	color: #000000
 }
 
-TD.sommaireTitle {
+td.sommaireTitle {
 	font-size: 20pt;
 	font-weight: bold
 }
 
-TD.sommaireDescription {
+td.sommaireDescription {
 	font-size: 8pt;
 	color: #000000
 }
 
-TD.sommaire {
+td.sommaire {
 	font-size: 12pt;
 	font-weight: bold
+}
+
+.center {
+	text-align:center;
+}
+.center table {
+	margin-right:auto;
+	margin-left:auto;
+	
 }
 
 /***************************************
