--- a/war-core/src/main/webapp/util/styleSheets/jquery/smartpaginator.css
+++ b/war-core/src/main/webapp/util/styleSheets/jquery/smartpaginator.css
@@ -32,50 +32,73 @@
 	margin: 0;
 	float: left;
 	margin-right: 4px;
+	border:0 !important;
 }
 .pager ul li
 {
 	display: inline;
 	margin-left: 2px;
+	padding:0 !important;
 }
 .pager ul li a.normal
 {
 	text-decoration: none;
 	display: inline-table;
-	width: 20px;
-	height: 20px;
 	text-align: center;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
+	background-color: #FFFFFF;
+    border: 1px solid #D4D4D4;
+    color: #000000;
+    font-size: 100%;
+    font-weight: 100;
+    height: 1.3em;
+	margin: 0 2px 0 0;
+    padding: 2px 5px;
+    text-decoration: none;
+    vertical-align: top;
 }
 .pager span
 {
-	margin-left: 4px;
-	color: White;
-	float: left;
+    float: left;
+    font-size: 95%;
+    line-height: 1.6em;
+    margin-right: 0.5em;
+    padding: 2px 3px;
+    text-align: center;
+    vertical-align: top;
+    width: auto;
 }
 .pager .btn
 {
 	display: block;
-	width: 40px;
 	text-align: center;
 	float: left;
-	padding: 0;
-	margin: 0;
-	margin-left: 4px;
+	margin: 0 2px 0 0;
 	cursor: pointer;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
+	background-color: #FFFFFF;
+    border: 1px solid #D4D4D4;
+    color: #000000;
+    font-size: 100%;
+    font-weight: 100;
+    height: 1.3em;
+    padding: 2px 5px;
+    text-decoration: none;
+    vertical-align: top;
 }
-.pager ul li a.active
+.pager ul li a.active, .pager ul li a.normal:hover
 {
 	text-decoration: none;
 	display: inline-table;
-	width: 20px;
-	height: 20px;
 	text-align: center;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
+	background-color: #9D9D9D;
+    border: 1px solid #9D9D9D;
+    color: #FFFFFF;
+    font-size: 100%;
+    font-weight: 100;
+    height: 1.3em;
+	margin: 0 2px 0 0;
+    padding: 2px 5px;
+    text-decoration: none;
+    vertical-align: top;
 }
 /*green*/.green
 {
