--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -558,6 +558,9 @@ Definition des class de style Silverpeas
 	background-repeat: repeat-x;
 	white-space: nowrap;
 }
+.portlet-content .intfdcolor {
+	white-space: normal;
+}
 
 #outilsAdmin {
 	position: absolute;
